# intro_ml

./: .gitignore  Makefile  README.rst  exclude.lst
_templates/mustache/: render_mustache.groovy  render_mustache.py  render_mustache.rb  usage.txt
_templates/mustache/skeleton-ml/: data.json  data.toml  data.yaml
_templates/mustache/skeleton-ml/{{name}}/: exclude.lst  opam.mustache  {{name}}.odocl.bak.mustache  {{name}}.opam.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/: post_gen_project.groovy.mustache  post_gen_project.py.mustache  post_gen_project.rb.mustache  post_gen_project.sh.mustache  post_render.groovy.mustache  post_render.py.mustache  post_render.rb.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/_parent_build_tool/dune/: Makefile.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/_parent_build_tool/make/: Makefile.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/_parent_build_tool/oasis/: Makefile.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/_parent_build_tool/ocamlbuild/: Makefile.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/_parent_init/: .hgignore  vcs_bkup.sh
_templates/mustache/skeleton-ml/{{name}}/choices/_parent_readme/: README.adoc.mustache  README.md.mustache  README.rst.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/build_tool/dune/: Makefile.mustache  _oasis.bak.mustache  dune-project.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/build_tool/make/: Makefile-auxffi.mk  Makefile-targets.mk  Makefile.new.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/build_tool/oasis/: Makefile.mustache  _oasis.mustache  myocamlbuild.ml  tail_myocamlbuild_bisect.ml.bak
_templates/mustache/skeleton-ml/{{name}}/choices/build_tool/ocamlbuild/: Makefile-auxffi.mk  Makefile-targets.mk  Makefile.new.mustache  _tags.mustache  configure.sh  myocamlbuild.ml
_templates/mustache/skeleton-ml/{{name}}/choices/ffi_lib/swig/: classic.ml.mustache  classic_c.i.mustache  lib{{name}}_stubs.clib.bak.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/license/: LICENSE_Apache-2.0.mustache  LICENSE_BSD-3-Clause.mustache  LICENSE_GPL-3.0+.mustache  LICENSE_ISC.mustache  LICENSE_MIT.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/readme/: README.adoc.mustache  README.md.mustache  README.rst.mustache
_templates/mustache/skeleton-ml/{{name}}/choices/testfrwk/ounit/tests/: dune.bak.mustache  tc_new.ml.mustache  tp_classic.ml.mustache  tp_new.ml.mustache  ts_main.ml.mustache  ts_main.sh.mustache
_templates/mustache/skeleton-ml/{{name}}/resources/: prac.conf  prac.toml
_templates/mustache/skeleton-ml/{{name}}/src/{{parent}}/: META.bak.mustache  dune.bak.mustache  main.ml.mustache  main.mli  main.sh.mustache  {{name}}.mldylib.bak.mustache  {{project}}.ml.mustache
api/: .hgignore  LICENSE  Makefile  README.rst  _oasis  _oasis.bak  _tags  dune-project  exclude.lst  intro_ml-practice.odocl.bak  intro_ml-practice.opam  intro_ml.practice.odocl  myocamlbuild.ml  opam  setup.ml
api/src/intro_ml/: META  META.bak  dune  intro_ml-practice.mllib.bak  intro_ml.practice.mldylib  intro_ml.practice.mllib  practice.ml  practice_Classic.ml  practice_Classic.mli  practice_Classic_Hiorder.ml  practice_Classic_Puzzles.ml  practice_Classic_Streams.ml  practice_Sequenceops.ml  practice_Sequenceops.mli  practice_Sequenceops_Hiorder.ml  recurrence_relations_classic_seqops.txt  recurrence_relations_streams_var_seqs.txt
api/tests/: dune  tc_classic.ml  tc_sequenceops.ml  tp_classic.ml  tp_sequenceops.ml  ts_main.ml  ts_main.sh
app/: .editorconfig  Makefile  README.rst  _oasis  _oasis.bak  _tags  dune-project  exclude.lst  intro_ml-intro.odocl.bak  intro_ml-intro.opam  myocamlbuild.ml  opam  setup.ml
app/resources/: prac.yaml
app/src/intro_ml/: META.bak  dune  intro.ml  intro.mli  intro_ml-intro.mldylib.bak  main.ml  main.sh  person.ml
app/tests/: dune  tc_classic.ml  tc_collections.ml  tc_new.ml  tp_classic.ml  tp_collections.ml  ts_main.ml  ts_main.sh
common/: Makefile  Makefile-auxffi.mk  README.rst  _oasis.bak  _tags  dune-project  intro_ml-util.odocl.bak  intro_ml-util.opam  intro_ml.util.odocl  myocamlbuild.ml  opam  setup.ml
common/src/intro_ml/: META  META.bak  dune  intro_ml-util.mllib.bak  intro_ml.util.mllib  person.mli  util.ml  util.mli
common/tests/: dune  tc_classic.ml  tc_new.ml  tp_new.ml  ts_main.ml  ts_main.sh
foreignc/: .gitignore  Makefile  Makefile-auxffi.mk  README.rst  _oasis  _oasis.bak  _tags  dune-project  intro_ml-foreignc.odocl.bak  intro_ml-foreignc.opam  intro_ml.foreignc.odocl  myocamlbuild.ml  opam  setup.ml
foreignc/resources/: bolt_new.conf  prac.json  prac.xml
foreignc/src/intro_ml/: META  META.bak  dune  foreignc.ml  foreignc.mli  intro_ml-foreignc.mllib.bak  intro_ml.foreignc.mldylib
foreignc/tests/: dune  tc_classic.ml  tp_classic.ml  ts_main.ml  ts_main.sh
