(lang dune 1.10)
;(name practice)
(generate_opam_files true)

;(explicit_js_mode)
(version 0.1.0)
(license Apache-2.0)
(authors thebridge0491)
(maintainers thebridge0491)
(source (uri git+https://bitbucket.org/thebridge0491/intro_ml.git))
(bug_reports "https://bitbucket.org/thebridge0491/intro_ml")
(homepage "https://bitbucket.org/thebridge0491/intro_ml")
(documentation "https://bitbucket.org/thebridge0491/intro_ml")

(package
  (name intro_ml-practice)
  (tags (demo intro practice))
  (depopts
    (odoc (and :with-doc (>= 1.5.0)))
    )
  (depends
    (dune (>= 1.10))
    (volt (>= 1.2))
    (bisect (>= 1.1))
    (batteries (>= 2.7.0))
    (intro_ml-util (>= 0.1.0))
    (ounit2 (and :with-test (>= 2.2.0)))
    (qcheck (and :with-test (>= 0.13)))
    )
  (synopsis "Practice sub-package for OCaml Intro examples project.")
  )
