(lang dune 1.10)
;(name foreignc)
(generate_opam_files true)

;(explicit_js_mode)
(version 0.1.0)
(license Apache-2.0)
(authors thebridge0491)
(maintainers thebridge0491)
(source (uri git+https://bitbucket.org/thebridge0491/intro_ml.git))
(bug_reports "https://bitbucket.org/thebridge0491/intro_ml")
(homepage "https://bitbucket.org/thebridge0491/intro_ml")
(documentation "https://bitbucket.org/thebridge0491/intro_ml")

(package
	(name intro_ml-foreignc)
	(tags (demo intro ffi foreign))
	(depopts
		(odoc :build)
		)
	(depends
		(dune (>= 1.10))
    (ctypes (>= 0.4))
    (ctypes-foreign (>= 0.4))
    (intro_ml-util (>= 0.1.0))
		)
	(synopsis "FFI sub-package for OCaml Intro examples project.")
	)
