(library
	(public_name intro_ml-foreignc)
	(name foreignc)
	;(private_modules )
	(libraries unix num str ctypes ctypes.foreign)
	(synopsis "FFI sub-package for OCaml Intro examples project.")
	(ocamlopt_flags -thread -w +a-4 -w -a-27 -ccopt -Wall -ccopt -pedantic -ccopt -fPIC -ccopt -std=c99 -ccopt -I%{env:PREFIX=/usr/local}/include -cclib -L%{env:PREFIX=/usr/local}/lib -cclib -lintro_c-practice)
	(ocamlc_flags -thread -w +a-4 -w -a-27 -ccopt -Wall -ccopt -pedantic -ccopt -fPIC -ccopt -std=c99 -ccopt -I%{env:PREFIX=/usr/local}/include -cclib -rpath -cclib %{env:PREFIX=/usr/local}/lib -cclib -L%{env:PREFIX=/usr/local}/lib -cclib -lintro_c-practice)
	)
